18.3/gitlab-install/ce-dep.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gl-ce-dep
  namespace: wuyao
  labels:
    name: gl-ce-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      name: gl-ce
  template:
    metadata:
      labels:
        name: gl-ce
    spec:
      containers:
      - name: gl-ce
        image: sameersbn/gitlab:10.3.3
        ports:
            - containerPort: 80
