18.3/gitlab-install/post-dep.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gl-postgre-dep
  namespace: wuyao
  labels:
    name: gl-postgre-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      name: gl-postgres
  template:
    metadata:
      labels:
        name: gl-postgres
    spec:
      containers:
      - image: sameersbn/postgresql:9.6-2
        name: postgres
        ports:
        - containerPort: 5432
