18.3/gitlab-install/ce-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gl-ce-svc
  namespace: wuyao
spec:
  ports:
  - port: 80
  selector:
    name: gl-ce
