18.3/gitlab-install/post-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gl-postgres-svc
  namespace: wuyao
spec:
  ports:
  - port: 5432
  selector:
    name: gl-postgres
