18.3/gitlab-install/redis-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gl-redis-svc
  namespace: wuyao
spec:
  ports:
  - port: 6379
  selector:
    name: gl-redis
